# ML_Project

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHIVE.md  CLEANUP.md  DEPLOYMENT.md  INSTALL.md  INTEGRATION.md  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  download_data.py  requirements.txt  start_backend.bat  start_backend.sh
.github/workflows/: cd.yml  ci.yml
.hooks/: check-branch-up-to-date.sh
Data/eegmat/: index.html  subject-info.csv
archive/: work.py
backend/: Dockerfile  README.md  api.py  entrypoint.sh  environment-gpu.yml  environment.yml  pyproject.toml  requirements.txt  train_models.py
frontend/ml/: .prettierignore  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/ml/src/: App.css  App.tsx  index.css
frontend/ml/src/components/: Layout.css  Layout.tsx  ThemeToggle.tsx
frontend/ml/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/ml/src/pages/: About.css  About.tsx  Dashboard.css  Dashboard.tsx  DataVisualization.css  DataVisualization.tsx  ModelPerformance.css  ModelPerformance.tsx  Predictions.css  Predictions.tsx
frontend/ml/src/services/: api.ts
frontend/ml/src/theme/: ThemeContext.ts  ThemeProvider.tsx
