[tool.poetry]
package-mode = false

[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ibeginnernoob",email = "adheilgupta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyedflib (>=0.1.30)",
    "mne (>=1.5.0)",
    "xgboost-cpu (>=2.1.2,<4.0.0)",
    "seaborn (>=0.12.0)",
    "umap-learn (>=0.5.4)",
    "shap (>=0.42.0)",
    "tqdm (>=4.65.0)",
    "fastapi (>=0.104.0)",
    "uvicorn[standard] (>=0.24.0)",
    "python-multipart (>=0.0.6)",
    "pandas (>=2.0)",
    "matplotlib (>=3.7)",
    "scikit-learn (>=1.3)",
    "requests (>=2.19.0)"
]


[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"
mypy = ">=1.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",  # line length handled by formatter
    "N803",  # scientific code convention: X/y style arguments
    "N806",  # scientific code convention: X_train/y_test variables
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = ["train_models.py"]  # training script is exploratory, skip strict checks
